--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
+    "react-tabindex": "^1.0.3",
     "sass-loader": "^10.1.1",
     "source-map-loader": "^2.0.0",
     "style-loader": "^2.0.0",
@@ -50,10 +51,13 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.7",
+    "bootstrap-icons": "^1.3.0",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   }
