--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-devtools": "^3.0.47",
     "bootstrap-icons": "^1.3.0",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
@@ -59,6 +60,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0",
     "redux-thunk": "^2.3.0"
   }
 }
