--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-devtools": "^3.0.47",
     "bootstrap-icons": "^1.3.0",
+    "bootstrap-slider": "^11.0.2",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
