--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
+    "react-bootstrap": "^1.4.3",
     "react-tabindex": "^1.0.3",
     "sass-loader": "^10.1.1",
     "source-map-loader": "^2.0.0",
@@ -48,13 +49,10 @@
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^5.7.3"
-  },
-  "dependencies": {
+    "webpack-merge": "^5.7.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-devtools": "^3.0.47",
     "bootstrap-icons": "^1.3.0",
-    "bootstrap-slider": "^11.0.2",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
