--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config ./config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js",
+    "build": "cross-env NODE_ENV=production  webpack --env BACKEND_URL='http://34.91.19.194:32456'  --config ./config/webpack.prod.js",
     "prettier": "prettier --loglevel warn --write \"src/**/*.{ts,tsx}\"",
     "eslint": "eslint --fix -- src/**/*tsx"
   },
@@ -16,15 +16,19 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.7",
     "@types/redux": "^3.6.0",
+    "@types/redux-devtools": "^3.0.47",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "@webpack-cli/serve": "^1.2.1",
     "awesome-typescript-loader": "^5.2.1",
+    "bootstrap-icons": "^1.3.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -32,14 +36,22 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-unicorn": "^26.0.0",
     "html-webpack-plugin": "^4.5.1",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "path": "^0.12.7",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-tabindex": "^1.0.3",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^10.1.1",
     "source-map-loader": "^2.0.0",
     "style-loader": "^2.0.0",
@@ -48,18 +60,7 @@
     "webpack": "^5.13.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^5.7.3",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/redux-devtools": "^3.0.47",
-    "bootstrap-icons": "^1.3.0",
-    "jquery": "^3.5.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools": "^3.7.0",
-    "redux-thunk": "^2.3.0"
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "css-minimizer-webpack-plugin": "^1.2.0"
